created first table verion

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.task-info-border {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: lightgrey;
+  opacity: 60%;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.task-info-wrap {
+  background-color: white;
+  width: 60%;
+  height: 60%;
+}
+
+.control-panel-wrap {
+  width: 100%;
+  height: 70px;
+}
+
+.date-picker > div > input {
+  width: 100px;
+}
+
+.MuiTableCell-body {
+  box-shadow: 0.5px 0px 0px 0px grey, 0.5px 0px 0px 0px grey;
 }
